--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,121 @@
+@article{garland2005phylogenetic,
+  title={Phylogenetic approaches in comparative physiology},
+  author={Garland Jr, Theodore and Bennett, Albert F and Rezende, Enrico L},
+  journal={Journal of experimental Biology},
+  volume={208},
+  number={16},
+  pages={3015--3035},
+  year={2005},
+  publisher={Company of Biologists}
+}
+
+@article{oconnor2022immunity,
+  title={Immunity and lifespan: answering long-standing questions with comparative genomics},
+  author={O’Connor, Emily A and Cornwallis, Charlie K},
+  journal={Trends in Genetics},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{cornwallis2017cooperation,
+  title={Cooperation facilitates the colonization of harsh environments},
+  author={Cornwallis, Charlie K and Botero, Carlos A and Rubenstein, Dustin R and Downing, Philip A and West, Stuart A and Griffin, Ashleigh S},
+  journal={Nature Ecology \& Evolution},
+  volume={1},
+  number={3},
+  pages={1--10},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{thayer2018impact,
+  title={Impact of prenatal stress on offspring glucocorticoid levels: A phylogenetic meta-analysis across 14 vertebrate species},
+  author={Thayer, Zaneta M and Wilson, Meredith A and Kim, Andrew W and Jaeggi, Adrian V},
+  journal={Scientific Reports},
+  volume={8},
+  number={1},
+  pages={1--9},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{maclean2012does,
+  title={How does cognition evolve? Phylogenetic comparative psychology},
+  author={MacLean, Evan L and Matthews, Luke J and Hare, Brian A and Nunn, Charles L and Anderson, Rindy C and Aureli, Filippo and Brannon, Elizabeth M and Call, Josep and Drea, Christine M and Emery, Nathan J and others},
+  journal={Animal cognition},
+  volume={15},
+  number={2},
+  pages={223--238},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{clayton1994comparative,
+  title={Comparative analysis of time spent grooming by birds in relation to parasite load},
+  author={Clayton, Dale H and Cotgreave, Peter},
+  journal={Behaviour},
+  volume={131},
+  number={3-4},
+  pages={171--187},
+  year={1994},
+  publisher={Brill}
+}
+
+@article{salguero2016fast,
+  title={Fast--slow continuum and reproductive strategies structure plant life-history variation worldwide},
+  author={Salguero-G{\'o}mez, Roberto and Jones, Owen R and Jongejans, Eelke and Blomberg, Simon P and Hodgson, David J and Mbeau-Ache, Cyril and Zuidema, Pieter A and De Kroon, Hans and Buckley, Yvonne M},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={1},
+  pages={230--235},
+  year={2016},
+  publisher={National Acad Sciences}
+}
+
+@article{bielby2007fast,
+  title={The fast-slow continuum in mammalian life history: an empirical reevaluation},
+  author={Bielby, Jon and Mace, Geogina M and Bininda-Emonds, Olaf RP and Cardillo, Marcel and Gittleman, John L and Jones, Katherine E and Orme, C David L and Purvis, A},
+  journal={The American Naturalist},
+  volume={169},
+  number={6},
+  pages={748--757},
+  year={2007},
+  publisher={The University of Chicago Press}
+}
+
+@article{mace2005phylogenetic,
+  title={A phylogenetic approach to cultural evolution},
+  author={Mace, Ruth and Holden, Clare J},
+  journal={Trends in ecology \& evolution},
+  volume={20},
+  number={3},
+  pages={116--121},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{watts2015broad,
+  title={Broad supernatural punishment but not moralizing high gods precede the evolution of political complexity in Austronesia},
+  author={Watts, Joseph and Greenhill, Simon J and Atkinson, Quentin D and Currie, Thomas E and Bulbulia, Joseph and Gray, Russell D},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={282},
+  number={1804},
+  pages={20142556},
+  year={2015},
+  publisher={The Royal Society}
+}
+
+@article{bielby2007fast,
+  title={The fast-slow continuum in mammalian life history: an empirical reevaluation},
+  author={Bielby, Jon and Mace, Geogina M and Bininda-Emonds, Olaf RP and Cardillo, Marcel and Gittleman, John L and Jones, Katherine E and Orme, C David L and Purvis, A},
+  journal={The American Naturalist},
+  volume={169},
+  number={6},
+  pages={748--757},
+  year={2007},
+  publisher={The University of Chicago Press}
+}
+
 @article{arnold201010ktrees,
   title={The 10kTrees website: a new online resource for primate phylogeny},
   author={Arnold, Christian and Matthews, Luke J and Nunn, Charles L},
