--- a/references.bib
+++ b/references.bib
@@ -28,6 +28,28 @@
   publisher={Nature Publishing Group}
 }
 
+@article{ives2011generalized,
+  title={Generalized linear mixed models for phylogenetic analyses of community structure},
+  author={Ives, Anthony R and Helmus, Matthew R},
+  journal={Ecological Monographs},
+  volume={81},
+  number={3},
+  pages={511--525},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{ives2010phylogenetic,
+  title={Phylogenetic logistic regression for binary dependent variables},
+  author={Ives, Anthony R and Garland Jr, Theodore},
+  journal={Systematic biology},
+  volume={59},
+  number={1},
+  pages={9--26},
+  year={2010},
+  publisher={Oxford University Press}
+}
+
 @article{thayer2018impact,
   title={Impact of prenatal stress on offspring glucocorticoid levels: A phylogenetic meta-analysis across 14 vertebrate species},
   author={Thayer, Zaneta M and Wilson, Meredith A and Kim, Andrew W and Jaeggi, Adrian V},
