--- a/references.bib
+++ b/references.bib
@@ -50,6 +50,39 @@
   publisher={Oxford University Press}
 }
 
+@article{kamilar2013phylogenetic,
+  title={Phylogenetic signal in primate behaviour, ecology and life history},
+  author={Kamilar, Jason M and Cooper, Natalie},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={368},
+  number={1618},
+  pages={20120341},
+  year={2013},
+  publisher={The Royal Society}
+}
+
+@article{blomberg2012independent,
+  title={Independent contrasts and PGLS regression estimators are equivalent},
+  author={Blomberg, Simon P and Lefevre, James G and Wells, Jessie A and Waterhouse, Mary},
+  journal={Systematic biology},
+  volume={61},
+  number={3},
+  pages={382--391},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@article{blomberg2003testing,
+  title={Testing for phylogenetic signal in comparative data: behavioral traits are more labile},
+  author={Blomberg, Simon P and Garland Jr, Theodore and Ives, Anthony R},
+  journal={Evolution},
+  volume={57},
+  number={4},
+  pages={717--745},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
 @article{thayer2018impact,
   title={Impact of prenatal stress on offspring glucocorticoid levels: A phylogenetic meta-analysis across 14 vertebrate species},
   author={Thayer, Zaneta M and Wilson, Meredith A and Kim, Andrew W and Jaeggi, Adrian V},
@@ -268,6 +301,72 @@
   pages={119--157},
   year={1989},
   publisher={The Royal Society London}
+}
+
+@article{wilkinson2019recurrent,
+  title={Recurrent evolution of extreme longevity in bats},
+  author={Wilkinson, Gerald S and Adams, Danielle M},
+  journal={Biology letters},
+  volume={15},
+  number={4},
+  pages={20180860},
+  year={2019},
+  publisher={The Royal Society}
+}
+
+@article{navalon2019evolutionary,
+  title={The evolutionary relationship among beak shape, mechanical advantage, and feeding ecology in modern birds},
+  author={Naval{\'o}n, Guillermo and Bright, Jen A and Marug{\'a}n-Lob{\'o}n, Jes{\'u}s and Rayfield, Emily J},
+  journal={Evolution},
+  volume={73},
+  number={3},
+  pages={422--435},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{dunn2015evolutionary,
+  title={Evolutionary trade-off between vocal tract and testes dimensions in howler monkeys},
+  author={Dunn, Jacob C and Halenar, Lauren B and Davies, Thomas G and Cristobal-Azkarate, Jurgi and Reby, David and Sykes, Dan and Dengg, Sabine and Fitch, W Tecumseh and Knapp, Leslie A},
+  journal={Current Biology},
+  volume={25},
+  number={21},
+  pages={2839--2844},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{navarrete2016coevolution,
+  title={The coevolution of innovation and technical intelligence in primates},
+  author={Navarrete, Ana F and Reader, Simon M and Street, Sally E and Whalen, Andrew and Laland, Kevin N},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={371},
+  number={1690},
+  pages={20150186},
+  year={2016},
+  publisher={The Royal Society}
+}
+
+@article{felsenstein2005using,
+  title={Using the quantitative genetic threshold model for inferences between and within species},
+  author={Felsenstein, Joseph},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={360},
+  number={1459},
+  pages={1427--1434},
+  year={2005},
+  publisher={The Royal Society London}
+}
+
+@article{wright1934analysis,
+  title={An analysis of variability in number of digits in an inbred strain of guinea pigs},
+  author={Wright, Sewall},
+  journal={Genetics},
+  volume={19},
+  number={6},
+  pages={506},
+  year={1934},
+  publisher={Oxford University Press}
 }
 
 @article{granger1969investigating,
