--- a/references.bib
+++ b/references.bib
@@ -369,6 +369,36 @@
   publisher={Oxford University Press}
 }
 
+@article{pagel1993seeking,
+  title={Seeking the evolutionary regression coefficient: an analysis of what comparative methods measure},
+  author={Pagel, Mark},
+  journal={Journal of theoretical Biology},
+  volume={164},
+  number={2},
+  pages={191--205},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@book{harvey1991comparative,
+  title={The comparative method in evolutionary biology},
+  author={Harvey, Paul H and Pagel, Mark D and others},
+  volume={239},
+  year={1991},
+  publisher={Oxford university press Oxford}
+}
+
+@article{pagel1999inferring,
+  title={Inferring the historical patterns of biological evolution},
+  author={Pagel, Mark},
+  journal={Nature},
+  volume={401},
+  number={6756},
+  pages={877--884},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
 @article{granger1969investigating,
   title={Investigating causal relations by econometric models and cross-spectral methods},
   author={Granger, Clive WJ},
