--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -7,11 +7,15 @@ bibliography: references.bib
 
 ## Introduction
 
-Phylogenetic comparative methods (PCMs) are commonly used to study the co-evolution of organismal traits, spanning topics such as anatomy and physiology [@garland2005phylogenetic; @oconnor2022immunity; @thayer2018impact; @navalon2019evolutionary; @dunn2015evolutionary], life history and behavior [@maclean2012does; @clayton1994comparative; @salguero2016fast; @bielby2007fast; @cornwallis2017cooperation; @wilkinson2019recurrent], and cultural evolution [@mace2005phylogenetic; @watts2015broad; @navarrete2016coevolution]. "Co-evolution" refers to repeatable patterns of trait co-variation over evolutionary time, across species or across populations. In practice, co-evolution can be investigated using a diverse family of statistical techniques, depending on the research question and type of data available (Garamszegi, 2014a; Nunn, 2011).
+Phylogenetic comparative methods (PCMs) are commonly used to study the co-evolution of organismal traits, spanning topics such as anatomy and physiology [@garland2005phylogenetic; @oconnor2022immunity; @thayer2018impact; @navalon2019evolutionary; @dunn2015evolutionary], life history and behavior [@maclean2012does; @clayton1994comparative; @salguero2016fast; @bielby2007fast; @cornwallis2017cooperation; @wilkinson2019recurrent], and cultural evolution [@mace2005phylogenetic; @watts2015broad; @navarrete2016coevolution]. "Co-evolution" refers to repeatable patterns of trait co-variation over evolutionary time, across species or across populations. In practice, co-evolution can be investigated using a diverse family of statistical techniques, depending on the research question and type of data available [@harvey1991comparative; @garamszegi2014modern; @nunn2011comparative].
 
 Trait co-evolution simply describes *how* traits change over time. Such descriptions have value for understanding natural history, ancestral state reconstruction (using the present to retrodict the past), and can stimulate new research questions. However, simply inferring that traits changed together in the past does not tell us *why* they changed, or how the traits would respond to intervention, i.e., causality. Nonetheless, researchers in ecology and evolution are often motivated to study trait co-evolution because they believe these patterns reflect causal relations. We briefly review some popular classes of PCM and their limitations with respect to causal inference.
 
 ## "Static" PCMs
+
+Static PCMs quantify co-evolution between traits using the evolutionary regression or correlation coefficient [@pagel1993seeking]. The evolutionary regression coefficient is an undirected association between traits over evolutionary time is $b = \frac{\sigma(X,Y)}{\sigma^2(X)}$, and the evolutionary correlation coefficient is the standardized coefficient $\rho = \frac{\sigma(X,Y)}{\sigma(X)\sigma(Y)}$ which can be interpreted as "a one standard deviation increase in trait $X$ is associated with a $\rho$ standard deviation change in trait $Y$."
+
+PHYLOGENETIC POSITION CAN BE THOUGHT OF AS A CONTINOUS CATEGORICAL RANDOM VARIABLE
 
 ### Phylogenetic Generalized Least Squares (PGLS)
 
@@ -20,12 +24,11 @@ Phylogenetic generalized least squares (PGLS) is a variant of linear regression 
 $$Y \sim \mathcal{N}(\boldsymbol{X}\beta, \boldsymbol{\Sigma})$$
 $$\boldsymbol{\Sigma} = \sigma^2\boldsymbol{V} $$
  
-Where $\boldsymbol{Y}$ is the outcome, $\boldsymbol{X}$ is a design matrix of predictors, $\beta$ is a vector of regression coefficients, and $\sigma^2$ is the variance. The covariance between related species is proportional to the off-diagonals of the phylogenetic variance-covariance matrix $\boldsymbol{V}$. To construct $\boldsymbol{V}$, we need (1) a matrix of patristic distances between species (i.e., time since divergence from last common ancestor) and (2) an assumed model of trait evolution.
+Where $\boldsymbol{Y}$ is the outcome, $\boldsymbol{X}$ is a design matrix of predictors, $\beta$ is a vector of regression coefficients, and $\sigma^2$ is the variance. $\mathcal{N}$ denotes a normal or Gaussian probability density function. The covariance between related species is proportional to the off-diagonals of the phylogenetic variance-covariance matrix $\boldsymbol{V}$. To construct $\boldsymbol{V}$, we need (1) a matrix of patristic distances between species (i.e., time since divergence from last common ancestor) and (2) an assumed model of trait evolution.
 
-The most commonly assumed model is Brownian motion, where trait X follows a random walk proportional to time ($t$), such that, for any $t$:
+The most commonly assumed model is Brownian motion (also called the Wiener process and thus denoted $W$), where $W$ follows a random walk proportional to time ($T$), such that, for any time $t$:
 
-$$ E[X] = 0 $$
-$$ \textrm{Var}[X] = \sigma^2 t $$
+$$ W_{T= t} - W_{T = 0} \sim\mathcal{N}(0,\sigma t) $$
 Therefore, the variance for a given species or population $j$ is proportional to total branch length of the tree leading from root to tip, and the covariance between $j$ and any other species or population $k$ is proportional to their amount of shared history. For example, imagine a phylogeny with only $J$ = 3 tip species. The last common ancestor of all species is dated to T = 10,000 years ago, and the last common ancestor of 2 and 3 is dated to 0.5T = 5,000 years ago. The implied phylogenetic variance-covariance matrix ($\boldsymbol{V}$) under a Brownian motion model is thus:
 
 $$ \boldsymbol{V} = \sigma^2 \begin{bmatrix}
@@ -44,7 +47,7 @@ $$ \boldsymbol{V}_s = \frac{\boldsymbol{V}}{T} = \sigma^2 \begin{bmatrix}
 0, & 0.5, & 1
 \end{bmatrix} $$
 
-Empirically, the actual degree of covariance between related species or populations may be less than expected under a pure Brownian motion model. For example, when evolution is rapid (or more mundanely, when measurement error on trait data is substantial) the "phylogenetic signal" will be weak such that even closely related taxa may have dramatically different trait values [@blomberg2003testing; @kamilar2013phylogenetic]. PGLS can estimate the strength of phylogenetic signal from comparative data, multiplying the off-diagonals of the variance-covariance matrix by $\lambda \in [0,1]$. For example:
+Empirically, the actual degree of covariance between related species or populations may be less than expected under a pure Brownian motion model. For example, when evolution is rapid (or more mundanely, when measurement error on trait data is substantial) the "phylogenetic signal" will be weak such that even closely related taxa may have dramatically different trait values [@blomberg2003testing; @kamilar2013phylogenetic]. PGLS can estimate the strength of phylogenetic signal from comparative data, multiplying the off-diagonals of the variance-covariance matrix by $\lambda \in [0,1]$ [@pagel1999inferring]. For example:
 
 $$ \boldsymbol{V_s} = \sigma^2 \begin{bmatrix}
 1, & 0, & 0 \\
@@ -52,18 +55,18 @@ $$ \boldsymbol{V_s} = \sigma^2 \begin{bmatrix}
 0, & \lambda0.5, & 1
 \end{bmatrix} $$
 
-This scaling is often referred to as a "branch length transformation," because shrinking the off-diagonals (shared evolutionary history) while holding the diagonals constant (independent evolution) is equivalent to "stretching" the terminal branches leading to the tips and "squishing" the past co-evolutionary branches. $\lambda = 1$ indicates that the phylogenetic strength is as strong as expected under a Brownian motion model, while lower values means that a lower proportion of the trait variance can be attributed to shared evolutionary history. At the extreme of $\lambda = 0$, $\boldsymbol{V}_s$ becomes an identity matrix and PGLS reduces to standard least squares regression.
+This scaling is often referred to as a "branch length transformation," because shrinking the off-diagonals (shared evolutionary history) while holding the diagonals constant (independent evolution) is equivalent to "stretching" the terminal branches leading to the tips and "shrinking" the past co-evolutionary branches. $\lambda = 1$ indicates that the phylogenetic strength is as strong as expected under a Brownian motion model, while lower values means that a lower proportion of the trait variance can be attributed to shared evolutionary history. At the extreme of $\lambda = 0$, $\boldsymbol{V}_s$ becomes an identity matrix and PGLS reduces to standard least squares regression.
 
 Brownian motion is the simplest and most widely used model, and often interpreted as "drift" across the phylogenetic tree. Other popular choices include Ornstein-Uhlenbeck, where change due is due to both random drift and "stabilizing selection" towards some optimal trait value, and Early Burst models of adaptive radiation where the rate of change ($\sigma$) decreases over time. In general, $\boldsymbol{V}$ is constructed by inputting a matrix of phylogenetic distances to some covariance function $C(x,x')$ such that $V_{[j,k]} = C(j,k)$.
 
+To recap, $\beta$ is an estimator of the evolutionary regression coefficient that takes into account the phylogenetic non-independence between tip species. Although PGLS is widely used in comparative biology, it has key limitations such as: assumption of Gaussian errors, prone to overfitting due to lack of parameter regularization, and cannot accommodate many common data structures including repeated measures of species trait values, missing data, and measurement error. In the next section we review more flexible regression approaches, as well as an important alternative method of estimating evolutionary associations.
+
+### Phylogenetic Generalized Multilevel Models
+
+Phylogenetic generalized multilevel models (PGLMMs) extend this analytic strategy, accommodating more complex, multivariate model designs [@ives2010phylogenetic; @ives2011generalized]. 
 
 
-
-PGLMMs $\lambda$ is equivalent to R^2.
-
-### Phylogenetinc Generalized Multilevel Models
-
-Phylogenetic generalized multilevel models (PGLMMs) extend this analytic strategy, accommodating more complex, multivariate model designs [@ives2010phylogenetic; @ives2011generalized]. While the terminology is not always consistent in the literature, note that "phylogenetic correlation" refers to a . A residual correlation refers to the remaining trait covariance *after* accounting for similarity due to shared evolutionary history. The residual correlations derived from PCMs are often interpreted as evidence for convergent evolution, adjusted for statistical non-independence and confounding due to phylogeny.
+While the terminology is not always consistent in the literature, note that "phylogenetic correlation" refers to a . A residual correlation refers to the remaining trait covariance *after* accounting for similarity due to shared evolutionary history. The residual correlations derived from PCMs are often interpreted as evidence for convergent evolution, adjusted for statistical non-independence and confounding due to phylogeny.
 
 Independent contrasts, PGLS, PGLMMs, PPA
 
